--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,11 +5,11 @@ steps:
 
   # Step 3: Build the Docker container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/docs.nyyu.io:$SHORT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/docs-nyyu-io:$SHORT_SHA', '.']
 
   # Step 4: Push the Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/docs.nyyu.io:$SHORT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/docs-nyyu-io:$SHORT_SHA']
 
   # Step 5: Deploy to Google Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -17,9 +17,9 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'docs.nyyu.io' # Name of your Cloud Run service
+      - 'docs-nyyu-io' # Name of your Cloud Run service
       - '--image'
-      - 'gcr.io/$PROJECT_ID/docs.nyyu.io:$SHORT_SHA'
+      - 'gcr.io/$PROJECT_ID/docs-nyyu-io:$SHORT_SHA'
       - '--region'
       - 'europe-west2' # Change to your preferred Cloud Run region
       - '--platform'
@@ -27,6 +27,6 @@ steps:
       - '--allow-unauthenticated'
 
 images:
-  - 'gcr.io/$PROJECT_ID/docs.nyyu.io:$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/docs-nyyu-io:$SHORT_SHA'
 
 timeout: '1600s'
