--- a/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-tutorial-basics-auction-launchpad-md-2b2.json
+++ b/.docusaurus/docusaurus-plugin-content-docs/default/site-docs-tutorial-basics-auction-launchpad-md-2b2.json
@@ -18,8 +18,8 @@
   },
   "sidebar": "tutorialSidebar",
   "previous": {
-    "title": "startup",
-    "permalink": "/docs/tutorial-basics/Marketplace/startup"
+    "title": "Swap",
+    "permalink": "/docs/tutorial-basics/nyyu-swap"
   },
   "next": {
     "title": "Decentralized Exchange (DEX)",
