--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,54 @@
 
 .DS_Store
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-affiliate-program-md-393.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-bug-bounty-md-630.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-commodity-listing-md-52a.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-de-listing-md-9cd.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-fees-md-319.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-loan-md-802.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-proof-of-reserves-md-587.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-real-estate-listing-md-cfe.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-staking-md-ea3.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-startup-listing-md-36d.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-token-listing-md-d72.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-services-utility-listing-md-e6e.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-tutorial-basics-getting-started-md-2b2.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-tutorial-basics-wallet-md-6a9.json
+.docusaurus/docusaurus-plugin-debug/default/p/docusaurus-debug-content-0d5.json
+node_modules/.cache/webpack/client-development-en/0.pack
+node_modules/.cache/webpack/client-development-en/1.pack
+node_modules/.cache/webpack/client-development-en/11.pack
+node_modules/.cache/webpack/client-development-en/12.pack
+node_modules/.cache/webpack/client-development-en/16.pack
+node_modules/.cache/webpack/client-development-en/17.pack
+node_modules/.cache/webpack/client-development-en/18.pack
+node_modules/.cache/webpack/client-development-en/2.pack
+node_modules/.cache/webpack/client-development-en/3.pack
+node_modules/.cache/webpack/client-development-en/4.pack
+node_modules/.cache/webpack/client-development-en/5.pack
+node_modules/.cache/webpack/client-development-en/6.pack
+node_modules/.cache/webpack/client-development-en/7.pack
+node_modules/.cache/webpack/client-development-en/8.pack
+node_modules/.cache/webpack/client-development-en/9.pack
+node_modules/.cache/webpack/client-development-en/index.pack
+node_modules/.cache/webpack/client-development-en/index.pack.old
+node_modules/.cache/webpack/client-development-en/0.pack
+node_modules/.cache/webpack/client-development-en/1.pack
+node_modules/.cache/webpack/client-development-en/11.pack
+node_modules/.cache/webpack/client-development-en/12.pack
+node_modules/.cache/webpack/client-development-en/16.pack
+node_modules/.cache/webpack/client-development-en/17.pack
+node_modules/.cache/webpack/client-development-en/18.pack
+node_modules/.cache/webpack/client-development-en/2.pack
+node_modules/.cache/webpack/client-development-en/3.pack
+node_modules/.cache/webpack/client-development-en/4.pack
+node_modules/.cache/webpack/client-development-en/5.pack
+node_modules/.cache/webpack/client-development-en/6.pack
+node_modules/.cache/webpack/client-development-en/7.pack
+node_modules/.cache/webpack/client-development-en/8.pack
+node_modules/.cache/webpack/client-development-en/9.pack
+node_modules/.cache/webpack/client-development-en/index.pack
+node_modules/.cache/webpack/client-development-en/index.pack.old
+.docusaurus/docusaurus-plugin-content-docs/default/p/docs-175.json
+.docusaurus/docusaurus-plugin-content-docs/default/site-docs-tutorial-basics-wallet-md-6a9.json
+.docusaurus/docusaurus-plugin-debug/default/p/docusaurus-debug-content-0d5.json
