--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "docs.nyyu.io",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "private": true,
+  "engines": {
+    "node": ">=24.9.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
